kajit/tests/snapshots/corpus__generated_rvsdg_postcard_bool_true_false_aarch64.snap
---
source: kajit/tests/corpus.rs
assertion_line: 514
expression: ir_text
---
lambda @0 (shape: "Bools") {
  region {
    args: [%cs, %os]
    n1 = CallIntrinsic(0x<ptr>, field_offset=0) [%cs:arg, %os:arg] -> [%cs, %os]
    n2 = CallIntrinsic(0x<ptr>, field_offset=1) [%cs:n1, %os:n1] -> [%cs, %os]
    results: [%cs:n2, %os:n2]
  }
}
